--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   path_provider: ^2.0.2
   geocoding: ^2.0.2
   location: ^4.2.0
+  google_maps_flutter: ^2.1.2
+
+  flutter_polyline_points: ^1.0.0
 
 dev_dependencies:
   flutter_test:
