--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   geocoding: ^2.0.2
   location: ^4.2.0
   google_maps_flutter: ^2.1.2
-
+  flutter_local_notifications: ^9.4.0
   flutter_polyline_points: ^1.0.0
 
 dev_dependencies:
