--- a/.github/workflows/dartIntegration.yml
+++ b/.github/workflows/dartIntegration.yml
@@ -48,4 +48,4 @@ jobs:
         flutter-version: '2.10.0'
         channel: 'stable' # or: 'dev' or 'beta'
     - name: "Run Flutter Driver tests"
-      run: "flutter drive --target=integration_test\app_test.dart"
+      run: "flutter drive"
