--- a/.github/workflows/dartIntegration.yml
+++ b/.github/workflows/dartIntegration.yml
@@ -1,13 +1,16 @@
-name: test
-on: [push, workflow_dispatch]
-jobs:
-  drive:
-    runs-on: windows-latest
-    steps:
-    - uses: actions/checkout@v1
-    - uses: subosito/flutter-action@v1
-      with:
-        channel: 'stable'
-    - run: |
-           flutter config --enable-windows-desktop
-           flutter test -d windows integration_test\app_test.dart
+- name: run tests
+  timeout-minutes: 30
+  uses: reactivecircus/android-emulator-runner@v2
+  env:
+    ANDROID_SIGN_PWD: ${{ secrets.ANDROID_SIGN_PWD }}
+    SECRET_REPO: ${{ secrets.SECRET_REPO }}
+    GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+  with:
+    api-level: 29
+    profile: ${{ matrix.device }}
+    script: |
+      /Users/runner/Library/Android/sdk/tools/bin/avdmanager list
+      ./scripts/setenv.sh
+      cd ./photochatapp
+      flutter pub get
+      flutter drive --target=integration_test/app.dart
